--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@barba/core": "^2.10.3",
+        "gsap": "^3.12.7"
     }
 }
