--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vite-plugin-full-reload": "^1.2.0"
     },
     "dependencies": {
         "@barba/core": "^2.10.3",
